[package]
name = "jupiter-swap-api-client"
version = "0.2.0"
description = "Jupiter Swap API rust client"
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
solana-sdk = "2"
solana-account-decoder = "2"
thiserror = "2"
base64 = "0.22.1"
serde_qs = "0.13.0"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls", "blocking"] }
rust_decimal = "1.36.0"
